k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: SERVICE_NAME-ENVIRONMENT-deployment
  namespace: default
  labels:
    app: SERVICE_NAME-ENVIRONMENT
spec:
  replicas: 1
  selector:
    matchLabels:
      app: SERVICE_NAME-ENVIRONMENT
  template:
    metadata:
      labels:
        app: SERVICE_NAME-ENVIRONMENT
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
      containers:
      - name: SERVICE_NAME
        image: AWS_ECR_URI:IMAGE_TAG
        ports:
        - name: http
          containerPort: CONTAINER_PORT
        imagePullPolicy: IfNotPresent
      nodeSelector:
        kubernetes.io/os: linux
