k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: custom-nginx-dev-svc
  namespace: default
  labels:
    app: custom-nginx
spec:
  selector:
    app: custom-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
